--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -34,6 +34,8 @@ dependencies:
   fluttertoast: ^8.2.2
   cached_network_image: ^2.5.1
   timeline_tile: ^2.0.0
+  flutter_staggered_grid_view: ^0.6.2
+  flutter_fb_news: ^1.1.4-dev.0
 
 
   # The following adds the Cupertino Icons font to your application.
