--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,7 +35,10 @@ dependencies:
   cached_network_image: ^2.5.1
   timeline_tile: ^2.0.0
   flutter_staggered_grid_view: ^0.6.2
-  flutter_fb_news: ^1.1.4-dev.0
+  #flutter_fb_news: ^1.1.4-dev.0
+  text_scroll: ^0.2.0
+  flutter_custom_carousel_slider: ^1.2.0
+  #flutter_carousel_slider: ^1.1.0
 
 
   # The following adds the Cupertino Icons font to your application.
