--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   flutter_custom_carousel_slider: ^1.2.0
   dots_indicator: ^2.0.0
   get: ^4.6.5
+  ndialog: ^4.3.0
   #flutter_carousel_slider: ^1.1.0
 
 
