--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -41,6 +41,10 @@ dependencies:
   dots_indicator: ^2.0.0
   get: ^4.6.5
   ndialog: ^4.3.0
+  dio: ^3.0.10
+  http: ^0.12.2
+  intl: ^0.18.1
+  flutter_automation: ^1.4.0
   #flutter_carousel_slider: ^1.1.0
 
 
