--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,9 @@ dependencies:
   http: ^0.12.2
   intl: ^0.18.1
   flutter_automation: ^1.4.0
+  simple_circular_progress_bar: ^1.0.2
+  step_progress_indicator: ^1.0.2
+  percent_indicator: ^4.2.3
   #flutter_carousel_slider: ^1.1.0
 
 
